--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "violetevergarden",
   "version": "1.0.0",
   "description": "Discord Bot",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "BlueRose",
