--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Discord Bot",
   "main": "dist/index.js",
   "scripts": {
+    "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "BlueRose",
